[package]
name = "sleek"
version = "0.3.1"
edition = "2021"
description = "Sleek is a CLI tool for formatting SQL files."
authors = ["Nicholas Rempel <nbrempel@gmail.com>"]
license = "MIT"
keywords = ["sql", "format", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/nrempel/sleek"


[dependencies]
clap = { version = "4.4.12", features = ["derive", "cargo"] }
glob = "0.3.1"
sqlformat = "0.2.3"
thiserror = "1.0.56"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
